# fudgeware

./: .gitignore  .pre-commit-config.yaml  README.rst  pyproject.toml
docs/: conf.py  index.rst
fudgeware/: cli.py  dice.py  fudge.py  loaded_diceware.py  wordlist.py
tests/: test_cli.py
