[tool.poetry]
name = "fudgeware"
version = "0.0.1"
description = "Create and manage diceware passwords with hash-based dice rolls"
authors = ["Ronni Elken Lindsgaard <ronni.lindsgaard@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
tox = "^3.24.5"
Sphinx = "^4.4.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
